# EchoPrint

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/orchestrator_server/: Dockerfile  README.md  pyproject.toml
apps/backend/orchestrator_server/scripts/: tests.py
apps/backend/orchestrator_server/src/: container.py  main.py
apps/backend/orchestrator_server/src/api/: __init__.py  auth.py  manager.py  messages.py  photos.py  sessions.py  transcriptions.py
apps/backend/orchestrator_server/src/api/infrastructure/: healthcheck.py
apps/backend/orchestrator_server/src/application/dto/media/: __init__.py  message_model.py  photo_model.py  voice_model.py
apps/backend/orchestrator_server/src/application/dto/session/: __init__.py  session_model.py
apps/backend/orchestrator_server/src/bootstrap/: __init__.py
apps/backend/orchestrator_server/src/bootstrap/lifespan/: manager.py
apps/backend/orchestrator_server/src/domain/media/: __init__.py  entities.py  interfaces.py
apps/backend/orchestrator_server/src/domain/session/: __init__.py  entities.py  interfaces.py
apps/backend/orchestrator_server/src/infrastructure/auth/: supabase.py
apps/backend/orchestrator_server/src/infrastructure/database/postgres/: connection.py
apps/backend/orchestrator_server/src/infrastructure/database/postgres/mappers/: media_message_mapper.py  (+3 more)
apps/backend/orchestrator_server/src/infrastructure/database/redis/: connection.py
apps/backend/orchestrator_server/src/infrastructure/transcription/: __init__.py  openai.py
apps/backend/orchestrator_server/src/shared/: __init__.py
apps/backend/orchestrator_server/src/shared/configuration/: loader.py  schema.py
apps/backend/orchestrator_server/src/shared/configuration/system/: config.yaml
apps/backend/orchestrator_server/tests/: base_test.py  conftest.py
apps/backend/orchestrator_server/tests/fixtures/auth/: fake_token_verifier.py
apps/backend/orchestrator_server/tests/fixtures/session/: fake_session_entity.py
apps/backend/orchestrator_server/tests/fixtures/user/: fake_user_entity.py  fake_user_repository.py
apps/backend/orchestrator_server/tests/integration/api/: test_voice_transcription.py
apps/backend/orchestrator_server/tests/unit/api/: test_auth.py  test_manager.py  test_messages.py  test_photos.py  test_sessions.py  test_transcriptions.py
apps/backend/orchestrator_server/tests/unit/api/infrastructure/: test_healthcheck.py
apps/backend/orchestrator_server/tests/unit/infrastructure/auth/: test_supabase.py
apps/backend/orchestrator_server/tests/unit/shared/configuration/: test_loader.py
(+74 files in other folders)
