[tool.poetry]
name = "echoprint-orchestrator-server"
version = "0.1.0"
description = "EchoPrint backend orchestrator"
authors = ["EchoPrint"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = ">=0.115,<1"
uvicorn = { extras = ["standard"], version = ">=0.34,<1" }
dependency-injector = ">=4.48,<5"
pydantic-settings = ">=2.7,<3"
sqlalchemy = ">=2.0,<3"
asyncpg = ">=0.30,<1"
psycopg = { extras = ["binary"], version = ">=3.2,<4" }
alembic = ">=1.15,<2"
redis = ">=5.2,<6"
pyjwt = { extras = ["crypto"], version = ">=2.10,<3" }
pyyaml = ">=6,<7"

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<9"

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"
